# discord-word-tracker

./: Cargo.toml  Dockerfile  run_docker.sh  run_docker_nfs.sh
src/: counter_db.rs  discord_client.rs  main.rs  test_utils.rs
