[package]
name = "discord-word-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
regex = "1"
reqwest = "0.11"
rocksdb = "0.18"
serenity = "0.11"
tokio = { version = "1.20", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
rand = "0.8"